# E-Sketch

./: .gitignore  .gitmodules  LICENSE
.github/workflows/: composite-deploy.yml  composite-test.yml  deploy.yml  est-api-test.yml  est-back-deploy.yml  test.yml  (+7 more)
api/: build.ps1  build.sh  est-back-api.yaml  est-proxy-api.yaml  nb-back-api.yaml  nb-proxy-api.yaml
est-back/: .clang-format  .clang-tidy  CMakeLists.txt  Makefile  apm.cpp  config.json  config.yaml  main.cpp
est-back/configs/: config_vars.testing.yaml  config_vars.yaml  static_config.yaml
est-back/controllers/: BoardController.cpp  BoardController.hpp  FigureController.cpp  FigureController.h  PingController.cpp  PingController.hpp
est-back/errors/: ExceptionHandler.cpp  ExeptionHandler.cpp  ExeptionHandler.h  HttpResponseFactory.cpp  HttpResponseFactory.h  ServiceException.cpp  ServiceException.h
est-back/filters/: ExceptionHandlingMiddleware.cpp  ExceptionHandlingMiddleware.h
est-back/migrations/: V01_init.sql
est-back/services/: BoardService.cpp  BoardService.h  FigureService.cpp  FigureService.h
est-back/src/: hello.cpp  hello.hpp  hello_benchmark.cpp  hello_test.cpp  main.cpp
est-back/test/: CMakeLists.txt  test_main.cc
est-back/tests/: test_basic.py
est-back/utils/: utils.cpp  utils.h
est-front/: README.md  package-lock.json  package.json
est-mono/: pom.xml
est-preview/: package-lock.json  package.json
est-proxy/: go.mod  go.sum
est-test/: package-lock.json  package.json
front/: package-lock.json
nb-back/: CMakeLists.txt  Makefile
nb-front/: package-lock.json  package.json
nb-proxy/: go.mod
(+343 files in other folders)
